<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvKg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:text="@string/tv_kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_age"
        app:layout_constraintBaseline_toBaselineOf="@+id/etAge"
        app:layout_constraintEnd_toStartOf="@+id/etAge"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/tv_year"
        app:layout_constraintBaseline_toBaselineOf="@+id/etAge"
        app:layout_constraintStart_toEndOf="@+id/etAge" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/tv_height"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeight"
        app:layout_constraintEnd_toStartOf="@+id/etHeight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:text="@string/tv_cm"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etHeight" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/tv_weight"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWeight"
        app:layout_constraintEnd_toStartOf="@+id/etWeight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvKg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:text="@string/tv_kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etWeight" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btSum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:text="@string/bt_sum"
        android:textColor="#FFFFFF"
        android:textSize="50px"
        app:layout_constraintBottom_toTopOf="@+id/btClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:text="@string/bt_clear"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvObesity"
        android:layout_width="198dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_obesity"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tvText" />

    <TextView
        android:id="@+id/tvText.weight"
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_text.weight"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvObesity" />

    <TextView
        android:id="@+id/tvText.kg"
        android:layout_width="193dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_text.kg"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tvText.weight" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="243dp"
        android:layout_height="38dp"
        android:text="@string/tv_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:id="@+id/tvKk"
        android:layout_width="16dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:text="@string/tv_kk"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvText.kg"
        app:layout_constraintStart_toEndOf="@+id/tvText.kg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="101dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="129dp" />

</androidx.constraintlayout.widget.ConstraintLayout>